[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Backdrop.png" type="Texture" id=1]
[ext_resource path="res://Tile.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Instruction Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://PlayButton.gd" type="Script" id=5]
[ext_resource path="res://OptionsButton.gd" type="Script" id=6]
[ext_resource path="res://QuitButton.gd" type="Script" id=7]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform int blurSize : hint_range(0,20);

void fragment()
{
COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, float(blurSize)/10.0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blurSize = 12

[sub_resource type="DynamicFont" id=3]
size = 82
font_data = ExtResource( 4 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 982.442, 564.637 )
scale = Vector2( 1.11402, 1.15079 )
z_index = -2
texture = ExtResource( 1 )

[node name="Blur" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 965.865, 551.872 )
scale = Vector2( 1.03329, 1.05295 )
texture = ExtResource( 1 )

[node name="OptionsScene" parent="." instance=ExtResource( 8 )]
visible = false

[node name="A" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 472.774, -88.796 )
rotation = -0.146783
scale = Vector2( 1.5, 1.5 )

[node name="N" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 616.774, -88.7959 )
rotation = 0.0621053
scale = Vector2( 1.5, 1.5 )
z_index = 1
tileLetter = "N"

[node name="A2" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 751.774, -104.796 )
rotation = -0.0325451
scale = Vector2( 1.5, 1.5 )

[node name="G" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 891.325, -106.796 )
rotation = 0.316664
scale = Vector2( 1.5, 1.5 )
tileLetter = "G"

[node name="R" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 1034.21, -112.796 )
rotation = 0.0395865
scale = Vector2( 1.5, 1.5 )
z_index = 1
tileLetter = "R"

[node name="A3" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 1173.21, -108.796 )
rotation = -0.311447
scale = Vector2( 1.5, 1.5 )

[node name="B" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 1310.21, -120.796 )
rotation = 0.0468335
scale = Vector2( 1.5, 1.5 )
z_index = 1
z_as_relative = false
tileLetter = "B"

[node name="S" parent="." groups=[
"MenuGroup",
] instance=ExtResource( 2 )]
position = Vector2( 1453.21, -106.796 )
rotation = 0.399535
scale = Vector2( 1.5, 1.5 )
tileLetter = "S"

[node name="TileTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="Play" type="Label" parent="." groups=[
"MenuGroup",
]]
margin_left = 864.0
margin_top = 1074.36
margin_right = 1056.0
margin_bottom = 1184.36
grow_horizontal = 2
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.788235, 0.631373, 0.494118, 1 )
text = "PLAY"
align = 1
valign = 1
uppercase = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="." groups=[
"MenuGroup",
]]
margin_left = 792.0
margin_top = 1217.92
margin_right = 1128.0
margin_bottom = 1327.92
grow_horizontal = 2
rect_pivot_offset = Vector2( 168, 146.068 )
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.788235, 0.631373, 0.494118, 1 )
text = "OPTIONS"
align = 1
valign = 1
uppercase = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Label" parent="." groups=[
"MenuGroup",
]]
margin_left = 864.0
margin_top = 1353.92
margin_right = 1056.0
margin_bottom = 1463.92
grow_horizontal = 2
rect_pivot_offset = Vector2( 168, 146.068 )
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.788235, 0.631373, 0.494118, 1 )
text = "QUIT"
align = 1
valign = 1
uppercase = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TileTimer" to="." method="_on_TileTimer_timeout"]
[connection signal="mouse_entered" from="Play" to="Play" method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="Play" method="_on_Play_mouse_exited"]
[connection signal="mouse_entered" from="Options" to="Options" method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="Options" to="Options" method="_on_Options_mouse_exited"]
[connection signal="mouse_entered" from="Quit" to="Quit" method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="Quit" method="_on_Quit_mouse_exited"]
